# PIAIC_QUIZ

agent_concept/: pyproject.toml
agent_concept/src/agent_concept/: __init__.py  context.py  guardrial.py  tools.py
practice/: pyproject.toml
practice/src/practice/: .env  agent_level.py  global_level.py  main.py  run_level.py
