[project]
name = "agent-concept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "owaisyosuf", email = "owais.251990@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.17",
]

[project.scripts]
agent-concept = "agent_concept:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
